@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Make containers with an other_arch face display it when opened.
+ server/apply.c
+Aaron Baugher 2007-02-15
+
 New server settings: allow_denied_spells_writing, for inscription.
  common/init.c
  include/global.h
